# typster

./: bun.lockb  justfile  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  language.tsx  main.tsx  schemes.tsx  store.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: compilers.rs  editor.rs  main.rs
src/components/: Editor.tsx  FileTree.tsx  SlideBar.tsx  Tab.tsx  app-sidebar.tsx  nav-actions.tsx  nav-favorites.tsx  nav-folders.tsx  nav-main.tsx  nav-projects.tsx  nav-user.tsx  space-switcher.tsx  theme-provider.tsx
src/components/header/: Titlebar.tsx
src/hooks/: use-store.tsx
src/pages/home/: App.tsx
