workspace = {}
[package]
name = "typster"
version = "0.0.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typst-syntax = "0.10.0"

typst-ts-core = { version = "0.4.2-rc8", default-features = false }
typst-ts-compiler = { version = "0.4.2-rc8", features = ["system"] }
log = "0.4.21"
env_logger = "0.11.3"
tauri-plugin-fs = "2.0.0-beta.2"

[patch.crates-io]
typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts.git" }
typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.0-2-content-hint" }
typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.0-2-content-hint" }
typst-ide = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.0-2-content-hint" }
typst-svg = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.0-2-content-hint" }
typst-pdf = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.0-2-content-hint" }
typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts.git" }
typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts.git" }
