workspace = {}
[package]
name = "typster"
version = "0.0.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.0", features = [] }
tauri-plugin-shell = "2.0.0-rc.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

log = "0.4.21"
env_logger = "0.11.3"
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
